<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/about_scrollview"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">

    <RelativeLayout
        android:id="@+id/about_holder"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/activity_margin">

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/about_email_label"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/activity_margin"
            android:text="@string/about_email_label"
            android:textColor="@android:color/white"/>

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/about_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autoLink="email"
            android:layout_below="@id/about_email_label"
            android:paddingBottom="@dimen/activity_margin"
            android:text="@string/about_my_email"
            android:textColor="@android:color/white"/>

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/about_copyright"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_below="@id/about_email"
            android:layout_alignParentBottom="true"
            android:gravity="center_horizontal|bottom"
            android:paddingTop="@dimen/activity_margin"
            android:text="@string/about_copyright"
            android:textColor="@android:color/white"/>

    </RelativeLayout>
</ScrollView>