<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <androidx.appcompat.widget.AppCompatAutoCompleteTextView
            android:id="@+id/schedule_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/activity_margin"
            android:layout_marginTop="@dimen/activity_margin"
            android:layout_marginEnd="@dimen/activity_margin"
            android:hint="@string/schedule_title"
            android:inputType="textCapSentences"
            android:maxLength="180"
            android:maxLines="1"
            android:textCursorDrawable="@null"
            android:textSize="@dimen/middle_text_size"
            android:textColor="@android:color/white"
            android:textColorHint="@color/md_grey_500"
            android:backgroundTint="@color/colorPrimary"/>

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/schedule_location"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/schedule_title"
            android:layout_marginStart="@dimen/activity_margin"
            android:layout_marginTop="@dimen/activity_margin"
            android:layout_marginEnd="@dimen/activity_margin"
            android:hint="@string/schedule_location"
            android:inputType="textCapSentences"
            android:maxLength="180"
            android:maxLines="1"
            android:textCursorDrawable="@null"
            android:textSize="@dimen/middle_text_size"
            android:textColor="@android:color/white"
            android:textColorHint="@color/md_grey_500"
            android:backgroundTint="@color/colorPrimary"/>

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/schedule_info"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/schedule_location"
            android:layout_marginStart="@dimen/activity_margin"
            android:layout_marginTop="@dimen/activity_margin"
            android:layout_marginEnd="@dimen/activity_margin"
            android:autoLink="all"
            android:hint="@string/schedule_info"
            android:inputType="textCapSentences|textMultiLine"
            android:textCursorDrawable="@null"
            android:textSize="@dimen/middle_text_size"
            android:textColor="@android:color/white"
            android:textColorHint="@color/md_grey_500"
            android:backgroundTint="@color/colorPrimary"/>

        <ImageView
            android:id="@+id/schedule_info_divider"
            android:layout_width="match_parent"
            android:layout_height="1px"
            android:layout_below="@id/schedule_info"
            android:layout_marginTop="@dimen/activity_margin"
            android:layout_marginBottom="@dimen/normal_margin"
            android:background="@color/divider_grey"
            android:importantForAccessibility="no" />

        <RelativeLayout
            android:id="@+id/schedule_time_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/schedule_info_divider">

            <ImageView
                android:id="@+id/schedule_time_image"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginStart="@dimen/normal_margin"
                android:contentDescription="@string/schedule_time"
                android:padding="@dimen/medium_margin"
                android:src="@drawable/ic_clock_vector" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/schedule_time_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/small_margin"
                android:layout_marginTop="@dimen/medium_margin"
                android:layout_marginEnd="@dimen/activity_margin"
                android:layout_toEndOf="@id/schedule_time_image"
                android:layout_alignParentTop="true"
                android:text="@string/schedule_day"
                android:textCursorDrawable="@null"
                android:textSize="@dimen/middle_text_size"
                android:textColor="@android:color/white" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/schedule_day_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/small_margin"
                android:layout_marginTop="@dimen/medium_margin"
                android:layout_marginEnd="@dimen/activity_margin"
                android:layout_alignParentTop="true"
                android:layout_alignParentEnd="true"
                android:text="@string/schedule_day_default"
                android:textCursorDrawable="@null"
                android:textSize="@dimen/middle_text_size"
                android:textColor="@android:color/white" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/schedule_start_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/small_margin"
                android:layout_marginTop="@dimen/activity_margin"
                android:layout_marginEnd="@dimen/activity_margin"
                android:layout_below="@id/schedule_time_text"
                android:layout_toEndOf="@id/schedule_time_image"
                android:text="@string/schedule_start_at"
                android:textCursorDrawable="@null"
                android:textSize="@dimen/middle_text_size"
                android:textColor="@android:color/white" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/schedule_start_time_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/activity_margin"
                android:layout_marginTop="@dimen/activity_margin"
                android:layout_marginEnd="@dimen/activity_margin"
                android:layout_below="@id/schedule_time_text"
                android:layout_alignParentEnd="true"
                android:text="@string/schedule_start_time"
                android:textCursorDrawable="@null"
                android:textSize="@dimen/middle_text_size"
                android:textColor="@android:color/white" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/schedule_end_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/small_margin"
                android:layout_marginTop="@dimen/activity_margin"
                android:layout_marginEnd="@dimen/activity_margin"
                android:layout_below="@id/schedule_start_text"
                android:layout_toEndOf="@id/schedule_time_image"
                android:text="@string/schedule_end_at"
                android:textCursorDrawable="@null"
                android:textSize="@dimen/middle_text_size"
                android:textColor="@android:color/white" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/schedule_end_time_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/activity_margin"
                android:layout_marginTop="@dimen/activity_margin"
                android:layout_marginEnd="@dimen/activity_margin"
                android:layout_below="@id/schedule_start_text"
                android:layout_alignParentEnd="true"
                android:text="@string/schedule_end_time"
                android:textCursorDrawable="@null"
                android:textSize="@dimen/middle_text_size"
                android:textColor="@android:color/white" />

        </RelativeLayout>

        <ImageView
            android:id="@+id/schedule_time_divider"
            android:layout_width="match_parent"
            android:layout_height="1px"
            android:layout_below="@id/schedule_time_layout"
            android:layout_marginTop="@dimen/activity_margin"
            android:layout_marginBottom="@dimen/normal_margin"
            android:background="@color/divider_grey"
            android:importantForAccessibility="no" />
        
    </RelativeLayout>

</ScrollView>